chore: updates package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://devpavan04.github.io/workpal-landing",
+  "homepage": "https://www.workpal.pro/",
   "name": "workpal-landing",
   "version": "0.1.0",
   "private": true,
